syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	
rpc GetCustomerInfo (CustomerLookupModel) returns (CustomerModel);
rpc GetNewCustomers (newCustomerRequest) returns(stream CustomerModel);//this is how to stream data 
}

message newCustomerRequest{

}

message CustomerLookupModel{

int32 userId=1;
//CustomerModel repeats=2;//for array of objects instead of this do "stream CustomerModel"

}

message CustomerModel{
	string firstName=1;
	string lastName=2;
	string emailID=3;
	bool isALive=4;
	int32 age=5;

}